--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -1,1 +1,8 @@
-<p>roomlist works!</p>
+<div class="container">
+  <h1>Welcome {{displayname}}</h1>
+  <form action="" (ngSubmit)="logout()">
+    <button type="submit" class="btn btn-primary">Logout</button>
+  </form>
+
+
+</div>
