we got username and userid

--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-  <h1>Welcome {{displayname}}</h1>
+  <h1>Welcome {{displayname}}, {{displayuserId}}</h1>
   <form action="" (ngSubmit)="logout()">
     <button type="submit" class="btn btn-primary">Logout</button>
   </form>
-
 
 </div>
