--- a/src/app/addroom/addroom.component.html
+++ b/src/app/addroom/addroom.component.html
@@ -1,1 +1,8 @@
-<p>addroom works!</p>
+<div class="container">
+  <form [formGroup]="addRoomForm">
+    <label>Enter room name</label>
+    <input type="text" class="form-control" formControlName="addroom" placeholder="Enter room name">
+    <button type="submit" class="btn btn-primary" (click)="addRooms()">Add Room</button>
+  </form>
+
+</div>
