add room is working

--- a/src/app/addroom/addroom.component.html
+++ b/src/app/addroom/addroom.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form [formGroup]="addRoomForm">
     <label>Enter room name</label>
-    <input type="text" class="form-control" formControlName="addroom" placeholder="Enter room name">
+    <input type="text" class="form-control" formControlName="roomname" placeholder="Enter room name">
     <button type="submit" class="btn btn-primary" (click)="addRooms()">Add Room</button>
   </form>
 
