--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -4,6 +4,9 @@
     <button type="submit" class="btn btn-primary">Logout</button>
     <p>{{displayname}} Please click here to add rooms</p>
     <button type="button" class="btn btn-primary" (click)="addRoom()">+</button>
+      <ul>
+        <li *ngFor="let room of displayroomname">{{room.roomname}}</li>
+      </ul>
   </form>
 
 </div>
