--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -1,8 +1,48 @@
 <div class="container">
-  <button class="btn btn-primary" (click)="logout()">Logout</button>
-  <form [formGroup]="chatForm" (ngSubmit)="chats()">
-    <input type="text" class="form-control" placeholder="Enter your message" formControlName="inputMessage">
-    <button type="submit" class="btn btn-primary">Send</button>
+  <!--  <button class="btn btn-primary" (click)="logout()">Logout</button>-->
+  <mat-drawer-container  class="drawer-container">
+    <mat-drawer mode="side" opened class="left-drawer">
+      <div class="users-pane">
+        <mat-card class="users-card">
+          <button type="button" class="btn btn-primary" (click)="logout()">
+            <mat-icon>logout</mat-icon>
+          </button>
+        </mat-card>
+        <mat-card class="users-card" *ngFor="let author of displayAuthor">
+          <mat-icon>person</mat-icon>
+          <span class="username">{{author.value}}</span>
+        </mat-card>
+      </div>
+    </mat-drawer>
 
-  </form>
+
+    <div class="chat-content">
+      <div class="message-box" *ngFor="let chat of displayChats">
+        <span class="chat-content-center">{{chat.message}}</span>
+        <div class="chat-status" text-center *ngIf="chat.type==='join'||chat.type==='exit';">
+
+          <ng-template #message>
+            <div class="chat-message">
+              <div class="right-bubble"
+                   [ngClass]="{'right-bubble': chat.author === displayAuthor, 'left-bubble': chat.author !== displayAuthor}">
+                <span class="msg-name" *ngIf="chat.author === displayAuthor">Me</span>
+                <span class="msg-name" *ngIf="chat.author !== displayAuthor">{{chat.author}}</span>
+                <!--              <span class="msg-date"> at {{chat.date | date:'short'}}</span>-->
+                <p text-wrap>{{chat.message}}</p>
+              </div>
+            </div>
+          </ng-template>
+
+        </div>
+      </div>
+      <footer>
+        <form [formGroup]="chatForm" (ngSubmit)="chats()">
+          <input type="text" class="form-control" placeholder="Enter your message" formControlName="inputMessage">
+          <button type="submit" class="btn btn-primary">Send</button>
+
+
+        </form>
+      </footer>
+    </div>
+  </mat-drawer-container>
 </div>
