filtered data by roomId

--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -1,6 +1,8 @@
 <div class="container">
-  <!--  <button class="btn btn-primary" (click)="logout()">Logout</button>-->
+
   <mat-drawer-container class="drawer-container">
+    <button class="btn btn-primary" (click)="logout()">Logout</button>
+
     <!--    <mat-drawer mode="side" opened class="left-drawer">-->
     <!--      <div class="users-pane">-->
     <!--        <mat-card class="users-card">-->
