--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -17,35 +17,35 @@
 
 
     <mat-drawer-content class="chat-pane">
-      <!--      <div #chatcontent [scrollTop]="scrolltop" class="chat-content">-->
+      <div #chatcontent [scrollTop]="scrolltop" class="chat-content">
 
-      <div class="message-box" *ngFor="let chat of displayChats">
-        <div class="chat-status" text-center *ngIf="chat.type === 'join' || chat.type === 'exit'; else message">
-          <!--          <span class="chat-date">{{chat.date | date:'short'}}</span>-->
-          <span class="chat-content-center">{{chat.message}}</span>
-        </div>
-
-        <ng-template #message>
-          <div class="chat-message">
-            <div class="right-bubble"
-                 [ngClass]="{'right-bubble': chat.author == curentUsername, 'left-bubble': chat.author != curentUsername}">
-              <span class="msg-name" *ngIf="chat.author === displayAuthors">Me</span>
-              <span class="msg-name" *ngIf="chat.author !== displayAuthors">{{chat.author}}</span>
-              <span class="msg-date"> at {{chat.displayDate}}</span>
-              <p text-wrap>{{chat.message}}</p>
-            </div>
+        <div class="message-box" *ngFor="let chat of displayChats">
+          <div class="chat-status" text-center *ngIf="chat.type === 'join' || chat.type === 'exit'; else message">
+            <!--          <span class="chat-date">{{chat.date | date:'short'}}</span>-->
+            <span class="chat-content-center">{{chat.message}}</span>
           </div>
-        </ng-template>
+
+          <ng-template #message>
+            <div class="chat-message">
+              <div class="right-bubble"
+                   [ngClass]="{'right-bubble': chat.author == curentUsername, 'left-bubble': chat.author != curentUsername}">
+                <span class="msg-name" *ngIf="chat.author === displayAuthors">Me</span>
+                <span class="msg-name" *ngIf="chat.author !== displayAuthors">{{chat.author}}</span>
+                <span class="msg-date"> at {{chat.displayDate}}</span>
+                <p text-wrap>{{chat.message}}</p>
+              </div>
+            </div>
+          </ng-template>
 
 
-<!--        <span>{{chat.author}}</span>-->
-<!--        <span class="chat-content-center">{{chat.message}}, {{chat.displayDate}}</span>-->
-        <!--        <div class="chat-status" text-center *ngIf="chat.type==='join'||chat.type==='exit';">-->
+          <!--        <span>{{chat.author}}</span>-->
+          <!--        <span class="chat-content-center">{{chat.message}}, {{chat.displayDate}}</span>-->
+          <!--        <div class="chat-status" text-center *ngIf="chat.type==='join'||chat.type==='exit';">-->
 
 
+        </div>
+        <!--scroll closing-->
       </div>
-
-      <!--      </div>-->
       <footer>
         <form [formGroup]="chatForm" (ngSubmit)="chats()">
           <input type="text" class="form-control" placeholder="Enter your message" formControlName="inputMessage">
