--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -46,13 +46,21 @@
         </div>
         <!--scroll closing-->
       </div>
-      <footer>
-        <form [formGroup]="chatForm" (ngSubmit)="chats()">
-          <input type="text" class="form-control" placeholder="Enter your message" formControlName="inputMessage">
+
+      <footer class="sticky-footer">
+        <form class="message-form" [formGroup]="chatForm" (ngSubmit)="chats()">
+          <mat-form-field>
+            <input matInput class="form-control" placeholder="Enter your message" formControlName="inputMessage" [errorStateMatcher]="matcher">
+            <mat-error>
+              <span *ngIf="!chatForm.get('inputMessage').valid && chatForm.get('inputMessage').touched">Enter your message</span>
+            </mat-error>
           <button type="submit" class="btn btn-primary">Send</button>
+          </mat-form-field>
         </form>
 
       </footer>
+
+
     </mat-drawer-content>
   </mat-drawer-container>
 </div>
