--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -4,7 +4,8 @@
     <mat-drawer mode="side" opened class="left-drawer">
       <div class="users-pane">
         <mat-card class="users-card">
-          <button class="btn btn-primary" (click)="logout()">
+          <button class="btn btn-secondary" (click)="logout()">
+            Logout
             <mat-icon>logout</mat-icon>
           </button>
         </mat-card>
