--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<!--<div class="container">-->
+<div class="example-container mat-elevation-z8">
   <mat-drawer-container class="drawer-container">
     <mat-drawer mode="side" opened class="left-drawer">
       <div class="users-pane">
@@ -17,7 +18,7 @@
 
 
     <mat-drawer-content class="chat-pane">
-      <div id="chatcontainer" #chatcontent [scrollTop]="scrolltop" class="chat-content">
+      <div id="chatcontainer" #chatcontent class="chat-content">
 
         <div class="message-box" *ngFor="let chat of displayChats">
           <div class="chat-status" text-center *ngIf="chat.type === 'join' || chat.type === 'exit'; else message">
@@ -46,18 +47,20 @@
         <!--scroll closing-->
       </div>
 
+
       <footer class="sticky-footer">
 
-        <form class="message-form" [formGroup]="chatForm" (ngSubmit)="chats()">
+        <form class="message-form" [formGroup]="chatForm" (ngSubmit)="submitChats()">
 <!--          <mat-form>-->
-          <div *ngIf="chatForm.errors">Input is invalid</div>
+<!--          <div *ngIf="chatForm.errors">Input is invalid</div>-->
+          <div *ngIf="chatmsg.invalid && chatmsg.touched" class="mat-error">Enter message please</div>
 
-            <input formControlName="chatmsg" placeholder="Enter your message" required>
-          <div *ngIf="chatmsg.invalid"
-               class="mat-error">Enter message please</div>
-            <button type="submit" mat-button [disabled]="!chatForm.valid" mat-icon-button>
+            <span><input formControlName="chatmsg" placeholder="Enter your message" required></span>
+
+            <span><button type="submit" mat-button [disabled]="!chatForm.valid" mat-icon-button>
               <mat-icon>send</mat-icon>
             </button>
+            </span>
 <!--          </mat-form>-->
         </form>
 
@@ -77,6 +80,7 @@
 <!--          </div>-->
 <!--        </form>-->
       </footer>
+
     </mat-drawer-content>
   </mat-drawer-container>
 </div>
