--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,3 +2,63 @@
   padding-top: 20px;
   background-color:  #B8B1C1;
 }
+.message-form{
+  position: relative;
+}
+
+.btn {
+  color: #625261;
+  background: #ffcb8e;
+  border-color: #ffcb8e;
+}
+body{
+  background: #EEE9E5;
+}
+/*.example-container{*/
+/*  position: relative;*/
+/*  padding: 10px;*/
+/*  background-color: #B8B1C1;*/
+/*  border-radius: 20px;*/
+/*}*/
+
+/*.example-table-container{*/
+/*  position: relative;*/
+/*  max-height: 400px;*/
+/*  overflow: auto;*/
+/*}*/
+/*table{*/
+/*  width: 100%;*/
+/*}*/
+
+/*.button-row{*/
+/*  margin: 10px 0;*/
+/*}*/
+
+/*.example-loading-shade {*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  bottom: 56px;*/
+/*  right: 0;*/
+/*  background: rgba(205, 59, 59, 0.15);*/
+/*  z-index: 1;*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*}*/
+
+/*.example-rate-limit-reached {*/
+/*  color: #980000;*/
+/*  max-width: 360px;*/
+/*  text-align: center;*/
+/*}*/
+
+/*!* Column Widths *!*/
+/*.mat-column-number,*/
+/*.mat-column-state {*/
+/*  max-width: 64px;*/
+/*}*/
+
+/*.mat-column-created {*/
+/*  max-width: 124px;*/
+/*}*/
