--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,16 @@
 .container{
-  padding-top: 20px;
+  padding-top: 3%;
+  padding-bottom: 8%;
+  margin-top: 10%;
   background-color:  #B8B1C1;
+  border-radius: 10px;
+  width: 50%;
 }
+h1{
+  margin-top: 5%;
+  color: #3ebde7;
+}
+
 .message-form{
   position: relative;
 }
@@ -10,10 +19,12 @@
   color: #625261;
   background: #ffcb8e;
   border-color: #ffcb8e;
+  width: 20%;
 }
-body{
-  background: #EEE9E5;
+button{
+  margin-top: 5%;
 }
+
 /*.example-container{*/
 /*  position: relative;*/
 /*  padding: 10px;*/
