--- a/src/app/addroom/addroom.component.css
+++ b/src/app/addroom/addroom.component.css
@@ -1,4 +1,24 @@
 .container{
-  padding-top: 20px;
+  padding-top: 3%;
+  padding-bottom: 8%;
+  margin-top: 10%;
   background-color:  #B8B1C1;
+  border-radius: 10px;
+  width: 50%;
 }
+
+h1{
+  margin-top: 5%;
+  color: #3ebde7;
+}
+.btn {
+  color: #625261;
+  background: #ffcb8e;
+  border-color: #ffcb8e;
+  width: 20%;
+}
+
+button{
+  margin-top: 5%;
+}
+
