--- a/src/app/roomlist/roomlist.component.css
+++ b/src/app/roomlist/roomlist.component.css
@@ -4,27 +4,59 @@
   padding-bottom: 8%;
   margin-top: 10%;
   border-radius: 10px;
+  width: 80%;
 }
 .mat-card{
   background: #ffcb8e;
+  width: 40%;
+
 }
 .rooms-name {
-  position: absolute;
+  /*position: absolute;*/
   margin-top: 5px;
   margin-left: 10px;
+
+
+  display: table-cell;
+  word-wrap: break-word;
 }
 .rooms-card {
-  margin: 5px 20px;
+  /*margin-top: 10%;*/
+  margin: 5px 30%;
   color: #625261;
 
+}
+.add-rooms{
+  margin: 20px 30%;
+  background-color: lightblue;
 }
 a{
   color: #625261;
   cursor: pointer;
   font-weight: bold;
+  font-size: large;
+
+
 }
 a:active{
   background-color: lightblue;
+
+}
+.mat-icon-button{
+  padding-left: 40%;
+}
+h3{
+  margin: 10px 29%;
+}
+h1{
+  margin-top: 5%;
+  color: #3ebde7;
 }
 
 
+
+.col-xs-1 {
+  background-color: yellow;
+  display: table-cell;
+  word-wrap: break-word;
+}
