--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -4,9 +4,10 @@
   </h1>
   <div class="container">
     <form (ngSubmit)="logout()">
-      <button class="mat-button" type="submit">
-        <mat-icon>logout</mat-icon>
-
+      <button type="submit" class="btn btn-primary">
+        <mat-icon>
+          logout
+        </mat-icon>
       </button>
       <h3>{{displayname}} Please click here to add rooms</h3>
       <mat-card class="add-rooms">
