--- a/src/app/addroom/addroom.component.css
+++ b/src/app/addroom/addroom.component.css
@@ -1,24 +1,35 @@
-.container{
+.container {
   padding-top: 3%;
   padding-bottom: 8%;
   margin-top: 10%;
-  background-color:  #B8B1C1;
+  background-color: #B8B1C1;
   border-radius: 10px;
   width: 50%;
 }
 
-h1{
+h1 {
   margin-top: 5%;
   color: #3ebde7;
 }
+
 .btn {
   color: #625261;
   background: #ffcb8e;
   border-color: #ffcb8e;
-  width: 20%;
+  width: 10%;
 }
 
-button{
+.back-button {
+  color: #625261;
+  background: #ffcb8e;
+  border-color: #ffcb8e;
+  width: 10%;
+  border-radius: 10%;
+  margin-top: 1%;
+  margin-bottom: 5%;
+}
+
+button {
   margin-top: 5%;
 }
 
