--- a/src/app/roomlist/roomlist.component.css
+++ b/src/app/roomlist/roomlist.component.css
@@ -1,18 +1,19 @@
-.container{
-  background-color:  #B8B1C1;
+.container {
+  background-color: #B8B1C1;
   padding-top: 3%;
   padding-bottom: 8%;
   margin-top: 10%;
   border-radius: 10px;
   width: 80%;
 }
-.mat-card{
+
+.mat-card {
   background: #ffcb8e;
   width: 40%;
 
 }
+
 .rooms-name {
-  /*position: absolute;*/
   margin-top: 5px;
   margin-left: 10px;
 
@@ -20,17 +21,20 @@
   display: table-cell;
   word-wrap: break-word;
 }
+
 .rooms-card {
   /*margin-top: 10%;*/
   margin: 5px 30%;
   color: #625261;
 
 }
-.add-rooms{
+
+.add-rooms {
   margin: 20px 30%;
   background-color: lightblue;
 }
-a{
+
+a {
   color: #625261;
   cursor: pointer;
   font-weight: bold;
@@ -38,25 +42,32 @@ a{
 
 
 }
-a:active{
+
+a:active {
   background-color: lightblue;
 
 }
-.mat-icon-button{
+
+.mat-icon-button {
   padding-left: 40%;
 }
-h3{
+
+h3 {
   margin: 10px 29%;
 }
-h1{
+
+h1 {
   margin-top: 5%;
   color: #3ebde7;
 }
 
+.btn {
+  color: #625261;
+  background: #ffcb8e;
+  border-color: #ffcb8e;
+  width: 10%;
+}
 
-
-.col-xs-1 {
-  background-color: yellow;
-  display: table-cell;
-  word-wrap: break-word;
+button {
+  margin-top: 1%;
 }
