--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -4,11 +4,14 @@
   </h1>
   <div class="container">
     <form (ngSubmit)="logout()">
+      <mat-card class="users-card">
       <button type="submit" class="btn btn-primary">
+        Logout
         <mat-icon>
           logout
         </mat-icon>
       </button>
+      </mat-card>
       <h3>{{displayname}} Please click here to add rooms</h3>
       <mat-card class="add-rooms">
         <a type="button" class="mat-icon-button" (click)="addRoom()">
