--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -14,7 +14,7 @@
       </mat-card>
       <h3>{{displayname}} Please click here to add rooms</h3>
       <mat-card class="add-rooms">
-        <a type="button" class="mat-icon-button" (click)="addRoom()">
+        <a class="mat-icon-button" (click)="addRoom()">
           <mat-icon>add</mat-icon>
         </a>
       </mat-card>
